Bug 380439 - Right click on files in Ark preview opens them instead of context menu
Summary: Right click on files in Ark preview opens them instead of context menu
Status: RESOLVED FIXED
Alias: None
Product: ark
Classification: Applications
Component: general (other bugs)
Version First Reported In: 17.04.1
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Elvis Angelaccio
URL:
Keywords:
: 365616 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-06-01 20:01 UTC by Fabian Vogt
Modified: 2017-06-06 10:43 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 17.07.80
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fabian Vogt 2017-06-01 20:01:52 UTC
Put an archive into another archive, then open it in ark.
Click on the archive within the archive to show the builtin preview for the contained files.
Then do a right click on one of the files in the previwer, they are opened instead of showing the context menu.
Comment 1 Elvis Angelaccio 2017-06-04 16:33:06 UTC
Git commit d7e2ea4503bdb1afd80866e2474e6f79d42b8cee by Elvis Angelaccio.
Committed on 04/06/2017 at 16:28.
Pushed by elvisangelaccio into branch 'master'.

Make ArkViewer a KPart mainwindow

This allows us to call createGUI() on the KPart we are embedding. As a
side effect, we are now able to show the popup menu of the ArkPart,
which is a stand-alone popup menu created by kxmlgui, when previewing a
nested archive in the ArkViewer. Same for the menubar and toolbar of the
embedded parts.

By using a KMainWindow (instead of a QDialog) we also gain some
features, for example we get size restoring for free (thanks to
setAutoSaveSettings()), without the need of manually using
KWindowConfig.
FIXED-IN: 17.07.80

Reviewers: #ark, fvogt

Differential Revision: D6075

M  +1    -0    part/CMakeLists.txt
A  +6    -0    part/ark_viewer.rc
M  +17   -26   part/arkviewer.cpp
M  +3    -7    part/arkviewer.h
M  +61   -92   part/arkviewer.ui
M  +1    -0    part/part.cpp

https://commits.kde.org/ark/d7e2ea4503bdb1afd80866e2474e6f79d42b8cee
Comment 2 Elvis Angelaccio 2017-06-06 10:43:58 UTC
*** Bug 365616 has been marked as a duplicate of this bug. ***